syntax = "proto3";
option java_package = "proto";
//option java_multiple_files = true;

package proto;
import "types.proto";

service Obbc {
    rpc FastVote(BbcMsg) returns (Empty) {};
    rpc EvidenceReqMessage(EvidenceReq) returns (EvidenceRes) {};
}
